--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -11,7 +11,7 @@
                 <input class="charname" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}" spellcheck="false"/>                
             </div>
             <div class="classname-row">
-                <input class="classname" name="classname" type="text" value="{{data.class.name}}" placeholder="{{ localize 'MB.ClassName' }}"/>                
+                <label class="classname" >{{data.class.name}}</label>                
             </div>
             <div class="hitpoints-row">
                 <span class="stat-label">{{ localize "MB.HitPoints" }}:</span>
