--- a/templates/scroll-sheet.html
+++ b/templates/scroll-sheet.html
@@ -35,6 +35,19 @@
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
+
+            {{!-- Carry weight --}}
+            <div class="form-group">
+                <label>{{ localize "MB.CarryWeight" }}:</label>
+                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+            </div> 
+
+            {{!-- Container space --}}
+            <div class="form-group">
+                <label>{{ localize "MB.ContainerSpace" }}:</label>
+                <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
+            </div> 
+
             {{!-- Scroll type --}}
             <div class="form-group">
                 <label>{{ localize "MB.ItemScrollType" }}:</label>
