--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -34,6 +34,18 @@
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
+            {{!-- Carry weight --}}
+            <div class="form-group">
+                <label>{{ localize "MB.CarryWeight" }}:</label>
+                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+            </div> 
+
+            {{!-- Container space --}}
+            <div class="form-group">
+                <label>{{ localize "MB.ContainerSpace" }}:</label>
+                <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
+            </div> 
+
             {{!-- Armor Current Tier --}}
             <div class="form-group">
                 <label>{{ localize "MB.CurrentTier" }}:</label>
