--- a/templates/weapon-sheet.html
+++ b/templates/weapon-sheet.html
@@ -33,6 +33,18 @@
                 <label>{{ localize "MB.ItemPrice" }}:</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
+
+            {{!-- Carry weight --}}
+            <div class="form-group">
+                <label>{{ localize "MB.CarryWeight" }}:</label>
+                <input type="text" name="data.carryWeight" value="{{data.carryWeight}}" placeholder="1" data-dtype="Number" />
+            </div> 
+
+            {{!-- Container space --}}
+            <div class="form-group">
+                <label>{{ localize "MB.ContainerSpace" }}:</label>
+                <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
+            </div> 
             
             {{!-- Weapon Type --}}
             <div class="form-group">
