--- a/templates/scroll-sheet.html
+++ b/templates/scroll-sheet.html
@@ -1,6 +1,6 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
 
-    {{!-- Item Sheet Header --}}
+    {{!-- Sheet Header --}}
     <header class="sheet-header flexrow">
         <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
         <div class="header-details">
