--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1071,6 +1071,9 @@ form.editable .results .result-details input[type="text"]:hover {
 form.editable .results .result-details input[type="text"]:focus {
   box-shadow: 0 0 10px #fff160;
 }
+.table-results .table-result .result-text {
+  /* TODO: decide if we want to style the whole result text div */
+}
 .table-results .table-result .result-text .entity-link {
   color: black;
   background-color: #fff160;
