--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -35,17 +35,169 @@
         </div>
 
         {{!-- Details Tab --}}
-        <div class="tab" data-group="primary" data-tab="details">      
+        <div class="tab" data-group="primary" data-tab="details">
+            {{!-- Morale --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Morale" }}:</label>
+                <input name="data.morale" type="text" value="{{data.morale}}" placeholder="10" data-dtype="Number"/>
+            </div>
+
+            {{!-- Trait --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Trait" }}:</label>
+                <input type="text" name="data.trait" value="{{data.trait}}" placeholder="None" data-dtype="String" />
+            </div>
+
+            {{!-- Speciality --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Speciality" }}:</label>
+                <input type="text" name="data.speciality" value="{{data.speciality}}" placeholder="None" data-dtype="String" />
+            </div>
+
+            {{!-- Value --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Value" }}:</label>
+                <input type="text" name="data.value" value="{{data.value}}" placeholder="None" data-dtype="String" />
+            </div>
+
         </div>
 
         {{!-- Violence Tab --}}
-        <div class="tab" data-group="primary" data-tab="violence">      
+        <div class="tab violence-tab" data-group="primary" data-tab="violence">
+            <ol class="items-list inventory-list">
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeWeaponPlural"}}</h3>
+                    <div class="target-armor">
+                        <span class="stat-label">{{localize 'MB.TargetArmor'}}:</span>
+                        <input class="stat-input versus-armor" name="data.targetArmorDie" type="text" value="{{data.targetArmorDie}}" data-dtype="String" placeholder="1d2" />
+                    </div>
+                </li>            
+                <ol class="item-list weapon-list">
+                    {{#each data.equippedWeapons as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}}</h4>
+                        <div class="item-fields">
+                            <span class="item-field">{{item.data.handed}}H</span>
+                            <span class="item-field">{{item.data.damageDie}}</span>
+                        </div>
+                        <div class="item-buttons">
+                            <button class="item-button rollable attack-button" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
+                                    title="{{localize 'MB.Attack'}}">{{localize 'MB.Attack'}}</button>
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-toggle {{item.data.toggleClass}}" title='{{item.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/each}}
+                </ol>
+                <div class="rule-text attack-rule">
+                    {{localize 'MB.AttackCritText'}}
+                    {{localize 'MB.AttackFumbleText'}}
+                </div>
+                <div class="violence-gutter"></div>
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeArmorPlural"}}</h3>
+                    <div class="item-controls flexrow">
+                    </div>
+                </li>   
+                <ol class="item-list armor-list">
+                    {{#if data.equippedArmor}}
+                    <li class="item flexrow" data-item-id="{{data.equippedArmor._id}}">
+                        <img src="{{data.equippedArmor.img}}" title="{{data.equippedArmor.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{data.equippedArmor.name}}</h4>
+                        <div class="item-buttons">
+                            <div class="armor-tiers">
+                                <div class="tiers">
+                                    <label class="stat-label tier-label">{{ localize "MB.Tier" }}:</label>
+                                    <ul class="tiers">
+                                        <li><label><input class="tier-radio" type="radio" name="currentTier" value="1" {{#ifEq data.equippedArmor.data.currentTier 1}}checked{{/ifEq}}/><span class="tier-num">1</span><span class="tier-dmg">-d2</span></label></li>
+                                        <li><label><input class="tier-radio" type="radio" name="currentTier" value="2" {{#ifEq data.equippedArmor.data.currentTier 2}}checked{{/ifEq}} {{#ifLt data.equippedArmor.data.maxTier 2}}disabled="true"{{/ifLt}}/><span class="tier-num">2</span><span class="tier-dmg">-d4</span></label></li>
+                                        <li><label><input class="tier-radio" type="radio" name="currentTier" value="3" {{#ifEq data.equippedArmor.data.currentTier 3}}checked{{/ifEq}} {{#ifLt data.equippedArmor.data.maxTier 3}}disabled="true"{{/ifLt}}/><span class="tier-num">3</span><span class="tier-dmg">-d6</span></label></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-toggle {{data.equippedArmor.data.toggleClass}}" title='{{data.equippedArmor.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/if}}
+                    {{#if data.equippedShield}}
+                    <li class="item flexrow" data-item-id="{{data.equippedShield._id}}">
+                        <img src="{{data.equippedShield.img}}" title="{{data.equippedShield.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{data.equippedShield.name}}</h4>
+                        <div class="item-buttons">
+                            <span class="rule-text shield-rule">{{localize 'MB.ShieldUseText'}}</span>
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-toggle {{data.equippedShield.data.toggleClass}}" title='{{data.equippedShield.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/if}}
+                </ol>  
+                <div class="underarmor-row">
+                    <div class="incoming-attack">
+                        <div>
+                            <label class="stat-label">{{localize 'MB.IncomingAttack'}}:</label>
+                            <input class="stat-input incoming-damage" name="data.incomingAttackDamageDie" type="text" value="{{data.incomingAttackDamageDie}}" data-dtype="String" placeholder="1d6" />                            
+                            <button class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                        </div>
+                        <div class="rule-text defend-rule">
+                            {{localize 'MB.DefendCritText'}}
+                            {{localize 'MB.DefendFumbleText'}}
+                        </div>
+                    </div>
+                </div>
+            </ol>                        
         </div>
 
         {{!-- Treasures Tab --}}
-        <div class="tab" data-group="primary" data-tab="treasures">      
+        <div class="tab equipment-tab" data-group="primary" data-tab="treasures">
+            <div class="equipment-top-row">
+                <div class="silver">
+                    <span class="stat-label silver-label">{{ localize "MB.Silver" }}:</span>
+                    <input class="stat-input silver-input" name="data.silver" type="number" value="{{data.silver}}" data-dtype="Number" />  
+                </div>
+            </div>
+            <ol class="items-list equipment-list">
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.Equipment"}}</h3>
+                    <div class="item-controls flexrow">
+                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                        </a>
+                    </div>
+                </li>
+                <ol class="item-list">
+                    {{#each data.equipment as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">
+                            {{item.name}}
+                            {{#ifEq item.type 'container'}}
+                              ({{localize 'MB.Holds'}} {{item.data.capacity}})
+                            {{/ifEq}}
+                        </h4>
+                        <div class="item-buttons">
+                        </div>
+                        <div class="item-controls">
+                            {{#if item.data.equippable}}
+                                <a class="item-control item-toggle {{item.data.toggleClass}}" title='{{item.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
+                            {{/if}}
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/each}}
+                </ol>
+            </ol>
         </div>
-
     </section>
-
 </form>
