Set button type, so enter presses in other textfields don't submit.

--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -102,7 +102,7 @@
                             <span class="item-field">{{item.data.damageDie}}</span>
                         </div>
                         <div class="item-buttons">
-                            <button class="item-button rollable attack-button" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
+                            <button type="button" class="item-button rollable attack-button" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
                                     title="{{localize 'MB.Attack'}}">{{localize 'MB.Attack'}}</button>
                         </div>
                         <div class="item-controls">
@@ -167,7 +167,7 @@
                         <div>
                             <label class="stat-label">{{localize 'MB.IncomingAttack'}}:</label>
                             <input class="stat-input incoming-damage" name="data.incomingAttackDamageDie" type="text" value="{{data.incomingAttackDamageDie}}" data-dtype="String" placeholder="1d6" />                            
-                            <button class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                            <button type="button" class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
                         </div>
                         <div class="rule-text defend-rule">
                             {{localize 'MB.DefendCritText'}}
@@ -184,7 +184,7 @@
                 <div class="powers-gutter">
                 </div>
                 <div class="wield-power">
-                    <button class="rollable wield-power-button" data-roll="d20+@abilities.presence.score" data-label="{{localize 'MB.WieldAPower'}}" >{{localize "MB.WieldAPower"}}</button>
+                    <button type="button" class="rollable wield-power-button" data-roll="d20+@abilities.presence.score" data-label="{{localize 'MB.WieldAPower'}}" >{{localize "MB.WieldAPower"}}</button>
                     <span class="rule-text wield-rule">{{localize 'MB.WieldAPowerText'}}</span>
                 </div>
                 <div class="powers-gutter">
