--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -82,7 +82,7 @@
                             <span class="item-field">{{item.data.damageDie}}</span>
                         </div>
                         <div class="item-buttons">
-                            <button class="item-button rollable attack-button" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
+                            <button type="button" class="item-button rollable attack-button" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
                                     title="{{localize 'MB.Attack'}}">{{localize 'MB.Attack'}}</button>
                         </div>
                         <div class="item-controls">
@@ -147,7 +147,7 @@
                         <div>
                             <label class="stat-label">{{localize 'MB.IncomingAttack'}}:</label>
                             <input class="stat-input incoming-damage" name="data.incomingAttackDamageDie" type="text" value="{{data.incomingAttackDamageDie}}" data-dtype="String" placeholder="1d6" />                            
-                            <button class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                            <button type="button" class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
                         </div>
                         <div class="rule-text defend-rule">
                             {{localize 'MB.DefendCritText'}}
